# pi-py-starter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  cpy  dev  py  pyproject.toml
.devcontainer/: devcontainer.json
.docker/: entrypoint.sh
deploy/: README.md  hello.service
docs/: hardware.md  prompt.md  spec.md
src/: README.md
src/hello/: __init__.py  cli.py
tests/: test_cli.py
