[project]
name = "hello"
version = "0.1.0"
description = "Raspberry Pi CPython Docker boilerplate"
requires-python = "==3.11.*"
dependencies = []

[project.scripts]
hello = "hello.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hello"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
