[project]
name = "hello"
version = "0.1.0"
description = "Raspberry Pi CPython Docker boilerplate"
requires-python = "==3.13.*"
dependencies = []

[project.scripts]
hello = "hello.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
